began adding JS, fixed layout misalignment, began converting some divs to uls

--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
   font-family: 'Comfortaa', cursive;
   font-family: 'Comic Neue', cursive;
+  list-style: none;
+  /* background-color: crimson; */
 }
+
+
 
 /* ///////   HEADER   /////////*/
 
@@ -13,7 +17,7 @@ header {
   display: flex;
   background-color: black;
   height: 80px;
-  width: 100vw;
+  width: 100%;
 }
 
 .header-container {
@@ -22,18 +26,18 @@ header {
   width: 800px;
   align-items: center;
   justify-content: space-between;
+  background-color: black;
 }
 
-ul {
+.nav-list {
   list-style: none;
   display: flex;
   justify-content: flex-start;
   width: 440px;
-  padding-left: 0px;
 }
 
-li {
-  padding-right: 18px;
+.nav-list li {
+  padding-right: 20px;
 }
 
 #selected-menu-item {
@@ -88,7 +92,6 @@ h6 {
   display: flex;
   width: 800px;
   margin: 0 auto;
-  height: 100vw;
   justify-content: space-between;
 }
 
@@ -114,6 +117,7 @@ h6 {
   background-color: #4BA0B5;
   height: 100px;
 }
+
 .main-col-1 .innermost-rows  {
   margin: 4px 0;
 }
@@ -122,10 +126,18 @@ h6 {
   background-color: #ffffff;
   border: 4px solid #CDCDCD;
   border-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   display: flex;
   flex-direction: column;
   height: fit-content;
+}
+
+.profesh-identity-list {
+  display: flex;
+}
+
+.profesh-identity-list li {
+  padding-right: 10px;
 }
 
 #map-marker-icon {
@@ -148,7 +160,6 @@ h6 {
 }
 
 .innermost-rows {
-  display: flex;
   padding: 5px;
 }
 
@@ -156,14 +167,16 @@ h6 {
   padding: 0px 5px 0 20px;
 }
 
-.main-col-2-row-1 {
-  display: flex;
-  flex-direction: column;  justify-content: space-between;
-  margin-bottom: 15px;
+.request-list li {
+  justify-content: space-between;
 }
 
 .main-col-1-row-1 .innermost-rows {
   align-items: center;
+}
+
+.main-col-2-row-1 li {
+  display: flex;
 }
 
 .innermost-cols {
